Mon Sep 23 14:43:21 2002  David Helder  <dhelder@umich.edu>

	* autogen.sh: Don't include macros dir if there isn't one.
	* aclocal.h: Remove this.  No longer required.

Sat Sep 21 21:11:41 2002  David Helder  <dhelder@umich.edu>

	* configure.ac: Fixes for autoconf 1.6.

	* acconfig.h.in: Removed this.  Not needed in newer autoconf.
	
	* autogen.sh: Include the macros directory in aclocal.
	    We do not distribute the macros directory.  This
	    is for developer convience.

	* examples/Makefile.am, src/Makefile.am/, Makefile.am: 
	    Move EXTRA_DIST to root makefile.  autoconf 1.6 doesn't
	    like EXTRA_DIST in subdirectories for some reason.

Thu Sep 12 16:13:37 2002  David Helder  <dhelder@umich.edu>

	* tests/Makefile.am (LDADD): Add glib_libs and gthread_libs

	* src/inetaddr.c (gnet_inetaddr_list_interfaces): Increment
	   pointer in header.  We were missing the first interface.
	   Check return value of ioctl for flags.
	* configure.ac (pthread_libs): Explicitly define
 	   HAVE_SOCKADDR_SA_LEN since autoconf no longer does it,
	   it seems.

	* Makefile.am (EXTRA_DIST): Include depcomp

Tue Sep 10 20:35:27:39 2002 Andrew Lanoix <alanoix@umich.edu>

	* README.win32: Update
	* GNET.DSP: Link to Glib 2.0
	* gnet.def: Add new funcs
	* examples\makefile.mingw: Update
	* tests\makefile.mingw: Update
	* src\makefile.mingw: Update

Wed Sep 04 21:54:47:06 2002 Andrew Lanoix <alanoix@umich.edu>

	* src/gnet.c (gnet_init): Don't do anything on win32
	* src/gnet-private.h (_GInetAddrAsyncState) Needs in_callback
	* src/inetaddr.c (gnet_gethostbyname) #define out unix code

Wed Aug 14 12:37:23 2002  David Helder  <dhelder@umich.edu>
	
	* *: Release 1.1.5

	* src/iochannel.c (gnet_io_channel_write_async): Don't succeed
	   immediately if the buffer is length 0.  Also allow a write
	   from a non-NULL buffer of length 0.

Sat Aug 10 19:18:33 2002  David Helder  <dhelder@umich.edu>

	* examples/hash.c: Move hash example to examples.
